// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Code
  nodeData={
    Object {
      "copyable": true,
      "lang": "javascript",
      "position": Object {
        "start": Object {
          "line": 0,
        },
      },
      "type": "code",
      "value": "mongoimport --db test --collection inventory ^
          --authenticationDatabase admin --username <user> --password <password> ^
          --drop --file ~\\\\downloads\\\\inventory.crud.json",
    }
  }
  uriWriter={
    Object {
      "cloudURI": undefined,
      "localURI": undefined,
    }
  }
>
  <div
    className="button-code-block"
  >
    <div
      className="button-row"
    >
      <a
        className="code-button--copy code-button"
        onClick={[Function]}
        role="button"
      >
        copy
        <div
          className="code-button__tooltip code-button__tooltip--inactive"
        >
          copied
        </div>
      </a>
    </div>
    <div
      className="copyable-code-block notranslate highlight-javascript"
    >
      <div
        className="highlight"
      >
        <Highlight
          className="javascript hljs"
          element={null}
          innerHTML={false}
        >
          <pre>
            <code
              className="javascript hljs"
            >
              mongoimport --db test --collection inventory ^
          --authenticationDatabase admin --username &lt;user&gt; --password &lt;password&gt; ^
          --drop --file ~\\downloads\\inventory.crud.json
            </code>
          </pre>
        </Highlight>
      </div>
    </div>
  </div>
</Code>
`;

exports[`renders with javascript disabled correctly 1`] = `
<Code
  nodeData={
    Object {
      "copyable": true,
      "lang": "javascript",
      "position": Object {
        "start": Object {
          "line": 0,
        },
      },
      "type": "code",
      "value": "mongoimport --db test --collection inventory ^
          --authenticationDatabase admin --username <user> --password <password> ^
          --drop --file ~\\\\downloads\\\\inventory.crud.json",
    }
  }
  uriWriter={
    Object {
      "cloudURI": undefined,
      "localURI": undefined,
    }
  }
>
  <div
    className="button-code-block"
  >
    <div
      className="button-row"
    />
    <div
      className="copyable-code-block notranslate highlight-javascript"
    >
      <div
        className="highlight"
      >
        <Highlight
          className="javascript hljs"
          element={null}
          innerHTML={false}
        >
          <pre>
            <code
              className="javascript hljs"
            >
              mongoimport --db test --collection inventory ^
          --authenticationDatabase admin --username &lt;user&gt; --password &lt;password&gt; ^
          --drop --file ~\\downloads\\inventory.crud.json
            </code>
          </pre>
        </Highlight>
      </div>
    </div>
  </div>
</Code>
`;
